--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Karolina Monnier</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="CSS/styles.css">
   <link rel="icon" href="pot.ico">
   <!--<link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Hind+Siliguri:wght@500&family=Montserrat:wght@300&display=swap" rel="stylesheet">-->
