--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="CSS/styles.css">
   <link rel="icon" href="pot.ico">
-  <!--<link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Hind+Siliguri:wght@500&family=Montserrat:wght@300&display=swap" rel="stylesheet">-->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Dancing+Script:wght@500&family=Hind+Siliguri:wght@500&family=Montserrat:wght@300&display=swap" rel="stylesheet">
 
@@ -20,7 +18,7 @@
     <h1>I'm Karolina</h1>
     <h3> a Begginer Web Developer.</h3>
     <img class="bottom-cloud" src="images/cloud.png" alt="img-cloud">
-    <!--<img src="images/mountain.png" alt="img-mountain">-->
+    
     <!--Icons made by <a href="https://www.flaticon.com/authors/dinosoftlabs" title="DinosoftLabs">DinosoftLabs</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>-->
     <img src="images/plant-pot.png" alt="pot" width="300" height="300" />
   </div>
@@ -29,7 +27,7 @@
     <div class="profile">
       <img src="images/kp.png" alt="KM" width="250" height="250">
       <h2>Hello.</h2>
-      <p class="intro">I recently discovered coding and I have fell in love with it. I have still loads to learn but I’m very determined to become a full-stack web developer.</p>
+      <p class="intro">I recently discovered coding and I have fell in love with it. I am very determined to become a full-stack web developer.</p>
       <br>
       <hr>
       <br>
@@ -55,15 +53,15 @@
       <table class="table" cellspacing=10px>
         <tr>
           <td><br>2016 - present</td>
-          <td>Looking after two young kids, becoming a teacher during day and a student at night..</td>
+          <td>Looking after two young kids, becoming a teacher during days and a student at nights.</td>
         </tr>
         <tr>
           <td> <a href="https://www.metia.com/"><strong>Metia Ltd</strong></a> <br>2013 - 2016</td>
-          <td><strong>Office Administrator</strong><br>Providing administrative support to global digital marketing agency. Working closely with HR and Finance Department. Also assisted throughout an office relocation.</td>
+          <td><strong>Office Administrator</strong><br>Providing administrative support to global digital marketing agency. Working closely with HR and Finance Department. Also coordinating an office relocation project.</td>
         </tr>
         <tr>
           <td> <a href="https://www.regus.com/en-us"><strong>MWB Business Exchange</strong></a><br>2012-2013</td>
-          <td><strong>Office Service Coordinator</strong><br>Responsible for delivering office services to 50 internal companies and 240 virtual clients. Also managing distribution of live ports from comms room area.</td>
+          <td><strong>Office Service Coordinator</strong><br>working within a team responsible for delivering office services to 50 internal companies and 240 virtual clients. Also managing distribution of live ports from comms room area.</td>
         </tr>
         <tr>
           <td> <a href="https://www.sciencemuseum.org.uk/home"><strong>Science Museum</strong></a><br>2011-2012</td>
@@ -71,7 +69,7 @@
         </tr>
         <tr>
           <td><strong>Job Centre-Poland</strong><br>2009-2011</td>
-          <td><strong>Career Advisor</strong><br>Carried out individual and group consultations and trainings to help clients understand the current job market and make decisions about their future.</td>
+          <td><strong>Career Advisor</strong><br>Carrying out individual and group consultations and trainings to help clients understand the current job market and make decisions about their future.</td>
         </tr>
       </table>
     </div>
@@ -83,12 +81,12 @@
       <div class="skill-row">
         <img class="computer" src="images/computer.png" alt="computer">
         <h3>Coding</h3>
-        <p>Coding became my daily routine. I’m self-taught and competent in HTML and CSS. Currently I have started a full-stack web developer course... </p>
+        <p>Coding became my daily routine. I’m self-taught and competent in HTML and CSS, JS. Currently I'm working on a blog website using Mongoose. </p>
       </div>
       <div class="skill-row">
         <img class="garden" src="images/sprout-1.png" alt="Spraut from Flaticons" width="300" height="300" />
         <h3>Garden</h3>
-        <p>I love to make my hands dirty carrying another garden project. Or just sit there with a cup of tea and listen to the nature...</p>
+        <p>I am an passionate gardener who likes to make his hands dirty and relax in the garden with a cup of tea.</p>
       </div>
     </div>
   </div>
