--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="img-cloud">
     <h1>I'm Karolina</h1>
-    <h3> a Begginer Web Developer.</h3>
+    <h3> a Beginner Web Developer.</h3>
     <img class="bottom-cloud" src="images/cloud.png" alt="img-cloud">
     
     <!--Icons made by <a href="https://www.flaticon.com/authors/dinosoftlabs" title="DinosoftLabs">DinosoftLabs</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>-->
