update intro text

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="profile">
       <img src="images/kp.png" alt="KM" width="250" height="250">
       <h2>Hello.</h2>
-      <p class="intro">I recently discovered coding and I have fell in love with it. I am very determined to become a full-stack web developer.</p>
+      <p class="intro">I am a self-taught web developer with big passion for codding. I'm keen to provide hard work in order to learn new things and succeed in whatever I do.</p>
       <br>
       <hr>
       <br>
@@ -53,7 +53,7 @@
       <table class="table" cellspacing=10px>
         <tr>
           <td><br>2016 - present</td>
-          <td>Looking after two young kids, becoming a teacher during days and a student at nights.</td>
+          <td>Looking after two young kids. Becoming a teacher during days and a student at nights.</td>
         </tr>
         <tr>
           <td> <a href="https://www.metia.com/"><strong>Metia Ltd</strong></a> <br>2013 - 2016</td>
@@ -61,7 +61,7 @@
         </tr>
         <tr>
           <td> <a href="https://www.regus.com/en-us"><strong>MWB Business Exchange</strong></a><br>2012-2013</td>
-          <td><strong>Office Service Coordinator</strong><br>working within a team responsible for delivering office services to 50 internal companies and 240 virtual clients. Also managing distribution of live ports from comms room area.</td>
+          <td><strong>Office Service Coordinator</strong><br>Working within a team responsible for delivering office services to 50 internal companies and 240 virtual clients. Also managing distribution of live ports from comms room area.</td>
         </tr>
         <tr>
           <td> <a href="https://www.sciencemuseum.org.uk/home"><strong>Science Museum</strong></a><br>2011-2012</td>
