--- a/index.html
+++ b/index.html
@@ -52,24 +52,24 @@
       <h2>Career.</h2>
       <table class="table" cellspacing=10px>
         <tr>
-          <td><br>2016 - present</td>
-          <td>Looking after two young kids. Becoming a teacher during days and a student at nights.</td>
+          <td>2016 - present</td>
+          <td>A mother by day, a student by night. An extended period of maternity leave to bring up my children until they were old enough to start nursery school. I have mastered communication skills, problem solving skills, multitasking and negotiating and managing conflict.</td>
         </tr>
         <tr>
           <td> <a href="https://www.metia.com/"><strong>Metia Ltd</strong></a> <br>2013 - 2016</td>
-          <td><strong>Office Administrator</strong><br>Providing administrative support to global digital marketing agency. Working closely with HR and Finance Department. Also coordinating an office relocation project.</td>
+          <td><strong>Office Administrator</strong><br>Providing administrative support to global digital marketing agency. Responsible for design, creation and management of reports across all levels of business. Maintaining oversight of the office relocation project with responsibility for coordinating the project plan, and following up with project members to ensure timely execution of tasks.</td>
         </tr>
         <tr>
           <td> <a href="https://www.regus.com/en-us"><strong>MWB Business Exchange</strong></a><br>2012-2013</td>
-          <td><strong>Office Service Coordinator</strong><br>Working within a team responsible for delivering office services to 50 internal companies and 240 virtual clients. Also managing distribution of live ports from comms room area.</td>
+          <td><strong>Office Service Coordinator</strong><br>Working within a team responsible for delivering office services to 50 internal companies and 240 virtual clients. Translated customers’ requests into visually appealing office configurations. Managing distribution of live ports from comms room area.</td>
         </tr>
         <tr>
           <td> <a href="https://www.sciencemuseum.org.uk/home"><strong>Science Museum</strong></a><br>2011-2012</td>
-          <td><strong>Customer Service Assistant</strong><br>Providing and promoting excellent customer service, making sure that service standards are being met.</td>
+          <td><strong>Customer Service Assistant</strong><br>Provided customer services in one of the most famous landmarks in London. Contributed to a positive team environment. Good time management and understanding of customer service and relationships.</td>
         </tr>
         <tr>
           <td><strong>Job Centre-Poland</strong><br>2009-2011</td>
-          <td><strong>Career Advisor</strong><br>Carrying out individual and group consultations and trainings to help clients understand the current job market and make decisions about their future.</td>
+          <td><strong>Career Advisor</strong><br>Encourage individuals who may face multiple barriers or lack motivation, to develop their confidence and belief in the benefits of a working life. Involved in the creation and implementation of an action plan to support and guide client in employability. Liaising with recruitment agencies to outsource vacancies on behalf of clients.</td>
         </tr>
       </table>
     </div>
@@ -100,9 +100,9 @@
       <a class="btn" href="mailto:kmonnier@hotmail.com">CONTACT ME</a>
     </div>
 
-    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-    <a class="footer-link" href=#H>Twitter</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/karolina-monnier-6b42a0a0">LinkedIn</a>
+    <a class="footer-link" href='https://twitter.com/KarolinaMonnier?s=07'>Twitter</a>
+    <a class="footer-link" href="https://gentle-cove-46147.herokuapp.com/">Website</a>
     <p class="copyrights">© 2021 Karolina Monnier.</p>
   </div>
 
