--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1>I'm Karolina</h1>
     <h3> a Beginner Web Developer.</h3>
     <img class="bottom-cloud" src="images/cloud.png" alt="img-cloud">
-    
+
     <!--Icons made by <a href="https://www.flaticon.com/authors/dinosoftlabs" title="DinosoftLabs">DinosoftLabs</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>-->
     <img src="images/plant-pot.png" alt="pot" width="300" height="300" />
   </div>
@@ -27,12 +27,12 @@
     <div class="profile">
       <img src="images/kp.png" alt="KM" width="250" height="250">
       <h2>Hello.</h2>
-      <p class="intro">I am a self-taught web developer with big passion for codding. I'm keen to provide hard work in order to learn new things and succeed in whatever I do.</p>
+      <p class="intro col-6">I am a self-taught web developer with big passion for codding. I'm keen to provide hard work in order to learn new things and succeed in whatever I do.</p>
       <br>
       <hr>
       <br>
       <h2>Education.</h2>
-      <table class="table" cellspacing=10px>
+      <table class="table col-7" cellspacing=10px>
         <tr>
           <td> <a href="https://www.appbrewery.co/"><strong>The App Brewery</strong></a> <br>January 2021 - present</td>
           <td>The Complete Web Development Bootcamp</td>
@@ -50,7 +50,7 @@
       <hr>
       <br>
       <h2>Career.</h2>
-      <table class="table" cellspacing=10px>
+      <table class="table col-7" cellspacing=10px>
         <tr>
           <td>2016 - present</td>
           <td>A mother by day, a student by night. An extended period of maternity leave to bring up my children until they were old enough to start nursery school. I have mastered communication skills, problem solving skills, multitasking and negotiating and managing conflict.</td>
@@ -78,12 +78,12 @@
   <div class="middle-container">
     <div class="skills">
       <h2>My Skills and Passions.</h2>
-      <div class="skill-row">
+      <div class="skill-row col-6">
         <img class="computer" src="images/computer.png" alt="computer">
         <h3>Coding</h3>
         <p>Coding became my daily routine. I’m self-taught and competent in HTML and CSS, JS. Currently I'm working on a blog website using Mongoose. </p>
       </div>
-      <div class="skill-row">
+      <div class="skill-row col-6">
         <img class="garden" src="images/sprout-1.png" alt="Spraut from Flaticons" width="300" height="300" />
         <h3>Garden</h3>
         <p>I am an passionate gardener who likes to make his hands dirty and relax in the garden with a cup of tea.</p>
@@ -95,7 +95,7 @@
   <div class="bottom-container">
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <p class="p-contact">If you are looking for someone creative with the ability to think independently and contribute to a supportive environment wherein they can learn new skills.</p>
+      <p class="p-contact col-7">If you are looking for someone creative with the ability to think independently and contribute to a supportive environment wherein they can learn new skills.</p>
       <br>
       <a class="btn" href="mailto:kmonnier@hotmail.com">CONTACT ME</a>
     </div>
@@ -109,3 +109,4 @@
 </body>
 
 </html>
+
