--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <a class="footer-link" href="https://www.linkedin.com/in/karolina-monnier-6b42a0a0">LinkedIn</a>
     <a class="footer-link" href='https://twitter.com/KarolinaMonnier?s=07'>Twitter</a>
     <a class="footer-link" href="https://gentle-cove-46147.herokuapp.com/">Website</a>
-    <p class="copyrights">© 2021 Karolina Monnier.</p>
+    <p class="copyrights">©Kalmon 2021</p>
   </div>
 
 </body>
