--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
     <div class="profile">
       <img src="images/kp.png" alt="KM" width="250" height="250">
       <h2>Hello.</h2>
-      <p class="intro col-6">I am a self-taught web developer with big passion for codding. I'm keen to provide hard work in order to learn new things and succeed in whatever I do.</p>
+      <p class="intro col-7">I am a self-taught web developer with big passion for codding. I'm keen to provide hard work in order to learn new things and succeed in whatever I do.</p>
       <br>
       <hr>
       <br>
       <h2>Education.</h2>
-      <table class="table col-7" cellspacing=10px>
+      <table class=" table responsive" cellspacing=10px>
         <tr>
           <td> <a href="https://www.appbrewery.co/"><strong>The App Brewery</strong></a> <br>January 2021 - present</td>
           <td>The Complete Web Development Bootcamp</td>
@@ -49,8 +49,9 @@
       <br>
       <hr>
       <br>
+
       <h2>Career.</h2>
-      <table class="table col-7" cellspacing=10px>
+      <table class="table responsive" cellspacing=10px>
         <tr>
           <td>2016 - present</td>
           <td>A mother by day, a student by night. An extended period of maternity leave to bring up my children until they were old enough to start nursery school. I have mastered communication skills, problem solving skills, multitasking and negotiating and managing conflict.</td>
@@ -61,15 +62,15 @@
         </tr>
         <tr>
           <td> <a href="https://www.regus.com/en-us"><strong>MWB Business Exchange</strong></a><br>2012-2013</td>
-          <td><strong>Office Service Coordinator</strong><br>Working within a team responsible for delivering office services to 50 internal companies and 240 virtual clients. Translated customers’ requests into visually appealing office configurations. Managing distribution of live ports from comms room area.</td>
+          <td><strong>Office Service Coordinator</strong><br>Working within a team responsible for delivering office services to 50 internal companies and 240 virtual clients. Translating customers’ requests into visually appealing office configurations. Managing distribution of live ports from comms room area.</td>
         </tr>
         <tr>
           <td> <a href="https://www.sciencemuseum.org.uk/home"><strong>Science Museum</strong></a><br>2011-2012</td>
-          <td><strong>Customer Service Assistant</strong><br>Provided customer services in one of the most famous landmarks in London. Contributed to a positive team environment. Good time management and understanding of customer service and relationships.</td>
+          <td><strong>Customer Service Assistant</strong><br>Providing customer services in one of the most famous landmarks in London. Contributing to a positive team environment. Good time management and understanding of customer service and relationships.</td>
         </tr>
         <tr>
           <td><strong>Job Centre-Poland</strong><br>2009-2011</td>
-          <td><strong>Career Advisor</strong><br>Encourage individuals who may face multiple barriers or lack motivation, to develop their confidence and belief in the benefits of a working life. Involved in the creation and implementation of an action plan to support and guide client in employability. Liaising with recruitment agencies to outsource vacancies on behalf of clients.</td>
+          <td><strong>Career Advisor</strong><br>Encouraging individuals who may face multiple barriers or lack motivation, to develop their confidence and belief in the benefits of a working life. Involved in the creation and implementation of an action plan to support and guide client in employability. Liaising with recruitment agencies to outsource vacancies on behalf of clients.</td>
         </tr>
       </table>
     </div>
@@ -78,12 +79,12 @@
   <div class="middle-container">
     <div class="skills">
       <h2>My Skills and Passions.</h2>
-      <div class="skill-row col-6">
+      <div class="skill-row col-7">
         <img class="computer" src="images/computer.png" alt="computer">
         <h3>Coding</h3>
-        <p>Coding became my daily routine. I’m self-taught and competent in HTML and CSS, JS. Currently I'm working on a blog website using Mongoose. </p>
+        <p>Coding became my daily routine. I’m self-taught and competent in HTML, CSS and JS. Currently I'm working on a blog website using Mongoose. </p>
       </div>
-      <div class="skill-row col-6">
+      <div class="skill-row col-7">
         <img class="garden" src="images/sprout-1.png" alt="Spraut from Flaticons" width="300" height="300" />
         <h3>Garden</h3>
         <p>I am an passionate gardener who likes to make his hands dirty and relax in the garden with a cup of tea.</p>
@@ -109,4 +110,3 @@
 </body>
 
 </html>
-
