--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="profile">
       <img src="images/kp.png" alt="KM" width="250" height="250">
       <h2>Hello.</h2>
-      <p class="intro col-7">I am a self-taught web developer with big passion for codding. I'm keen to provide hard work in order to learn new things and succeed in whatever I do.</p>
+      <p class="intro col-7">I am a self-taught web developer with big passion for coding. I'm keen to provide hard work in order to learn new things and succeed in whatever I do.</p>
       <br>
       <hr>
       <br>
